Fix text align

--- a/src/Jellyfin.Plugin.ListenBrainz/Configuration/styles.css
+++ b/src/Jellyfin.Plugin.ListenBrainz/Configuration/styles.css
@@ -9,5 +9,5 @@
 
 .slim-button {
     height: 30px;
-    padding: 0;
+    padding: 5px 0 5px 0;
 }
